added and removed portfolio layout

--- a/Smarty/HTML_BS4/assets/css/color_scheme/yellow.css
+++ b/Smarty/HTML_BS4/assets/css/color_scheme/yellow.css
@@ -119,7 +119,7 @@
 	#progressBar #bar,								/* OWL */
 	#page-menu,
 	#page-menu ul {
-		background-color:#FAB702;
+		background-color:#416bc5;
 	}
 	
 	/* !important required */
