--- a/assets/css/essentials.css
+++ b/assets/css/essentials.css
@@ -272,7 +272,7 @@ h5,
 h6 {
 	font-family:'Open Sans',Arial,Helvetica,sans-serif;
 	font-weight:600;
-	color:#414141;
+	color:#000000;
 	position: relative;
 	margin: 0 0 30px 0;
 	line-height:1.5;
@@ -6211,7 +6211,7 @@ section.alternate div.heading-title h3,
 section.alternate div.heading-title h4,
 section.alternate div.heading-title h5,
 section.alternate div.heading-title h6 {
-	background-color:#F9F9F9;
+	background-color:#202020;
 }
 section.dark div.heading-title h1,
 section.dark div.heading-title h2,
